--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "latest",
     "input-otp": "latest",
+    "jwt-decode": "^4.0.0",
     "keycloak-js": "^26.2.0",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
