--- a/package.json
+++ b/package.json
@@ -38,17 +38,18 @@
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.10.0",
+    "axios": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
     "date-fns": "4.1.0",
     "embla-carousel-react": "latest",
     "input-otp": "latest",
-    "jwt-decode": "^4.0.0",
-    "keycloak-js": "^26.2.0",
+    "jwt-decode": "latest",
+    "keycloak-js": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-intl": "^4.3.4",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
@@ -64,7 +65,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/react": "^19.1.8",
+    "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
