--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "latest",
     "input-otp": "latest",
-    "jwt-decode": "latest",
+    "jwt-decode": "^4.0.0",
     "keycloak-js": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
@@ -61,6 +61,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
